--- a/index.html
+++ b/index.html
@@ -10,48 +10,48 @@
 </head>
 <body>
     <!-- ==========================section start =================-->
-        <section class=" px-lg-5 py-lg-2 watch-section">
-            <div class="col-lg-6 col-12 p-5">
+        <section class=" px-lg-5 py-lg-2 watch-section ">
+            <div class="watch-text ">
                 <div>
-                    <h2 class="title">Smartwatch with the help of smart phone</h2>
+                    <h2 class="watch-title">Smartwatch with the help of smart phone</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit repudiandae placeat quisquam voluptates. Deleniti, mollitia?</p>
                 </div>
                 <!-- --------------- first details start --------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 p-2 watch-div">
+                    <div class="lg:p-3 md:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 p-2">
-                        <h4>Lorem, ipsum dolor.</h4>
+                    <div class="lg:p-3 md:p-3 p-2">
+                        <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
                 </div>
                   <!-- --------------- first details end --------------- -->
                  <!-- --------------- second details start--------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 p-2 watch-div">
+                    <div class="lg:p-3 md:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 p-2">
-                        <h4>Lorem, ipsum dolor.</h4>
+                    <div class="lg:p-3 md:p-3 p-2">
+                        <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
                 </div>
                  <!-- --------------- second details end--------------- -->
                  <!-- --------------- third details start --------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 p-2 watch-div">
+                    <div class="lg:p-3 md:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 p-2">
-                        <h4>Lorem, ipsum dolor.</h4>
+                    <div class="lg:p-3 md:p-3 p-2">
+                        <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
                 </div>
                    <!-- --------------- third details end --------------- -->
             </div>
             <!--  =============== big watch img ====================== -->
-            <div class="col-lg-6 col-12 px-5 py-lg-5 py-2 watch-div">
+            <div class=" watch-div">
                     <img src="image/watch.jpg" class="big-watch-image" alt="">
             </div>
         </section>
