--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 </div>
                 <!-- --------------- first details start --------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 md:p-3 p-2 watch-div">
+                    <div class="lg:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 md:p-3 p-2">
+                    <div class="lg:p-3 p-2">
                         <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
@@ -29,10 +29,10 @@
                   <!-- --------------- first details end --------------- -->
                  <!-- --------------- second details start--------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 md:p-3 p-2 watch-div">
+                    <div class="lg:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 md:p-3 p-2">
+                    <div class="lg:p-3 p-2">
                         <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
@@ -40,10 +40,10 @@
                  <!-- --------------- second details end--------------- -->
                  <!-- --------------- third details start --------------- -->
                 <div class="watch-details">
-                    <div class="lg:p-3 md:p-3 p-2 watch-div">
+                    <div class="lg:p-3 p-2 watch-div">
                         <img src="image/watch.jpg" class="small-watch-img" alt="">
                     </div>
-                    <div class="lg:p-3 md:p-3 p-2">
+                    <div class="lg:p-3 p-2">
                         <h4 class="lorem-title">Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, adipisci! Saepe, esse.</p>
                     </div>
